# ForgeRealm

./: CMakeLists.txt  README.md
docs/: architecture.md
include/core/: Application.hpp  Game.hpp  Input.hpp  ResourceManager.hpp  Time.hpp  Window.hpp
include/game/: Entity.hpp  Player.hpp  Tile.hpp  World.hpp
include/graphics/: PlayerRenderer.hpp  WorldRender.hpp  WorldRenderer.hpp
include/math/: Transform.hpp
src/: main.cpp
src/core/: Application.cpp  Game.cpp  Input.cpp  Time.cpp  Window.cpp
src/game/: Player.cpp  Tile.cpp  World.cpp
src/graphics/: PlayerRenderer.cpp  WorldRender.cpp  WorldRenderer.cpp
tests/: test  test.cpp
